--- a/requirements.txt
+++ b/requirements.txt
@@ -1,62 +1,321 @@
+# ShopOnline Uganda - Python Dependencies
+# Core e-commerce platform requirements
 
-# Django and core dependencies
+# Django Framework
 Django==4.2.7
 djangorestframework==3.14.0
 django-cors-headers==4.3.1
-django-filter==23.3
+django-filter==23.4
 django-extensions==3.2.3
-python-decouple==3.8
-
-# Authentication and security
-djangorestframework-simplejwt==5.3.0
-django-oauth-toolkit==1.7.1
-cryptography==41.0.7
 
 # Database
 psycopg2-binary==2.9.9
+django-environ==0.11.2
+
+# Authentication & Security
+djangorestframework-simplejwt==5.3.0
+django-allauth==0.57.0
+cryptography==41.0.7
+bcrypt==4.1.2
+
+# File Storage & Media
+Pillow==10.1.0
+django-storages==1.14.2
+boto3==1.34.0
+botocore==1.34.0
+
+# Caching & Session
 redis==5.0.1
 django-redis==5.4.0
+hiredis==2.2.3
 
-# Celery for background tasks
+# Task Queue
 celery==5.3.4
 django-celery-beat==2.5.0
-django-celery-results==2.5.1
+django-celery-results==2.5.0
+kombu==5.3.4
+billiard==4.2.0
 
-# WebSocket support
-channels==4.0.0
-channels-redis==4.1.0
+# API Documentation
+drf-spectacular==0.26.5
+drf-spectacular-sidecar==2023.11.1
 
-# File storage and image processing
-boto3==1.34.0
-django-storages==1.14.2
-Pillow==10.1.0
+# Monitoring & Logging
+flower==2.0.1
+django-debug-toolbar==4.2.0
+sentry-sdk==1.38.0
+
+# Email
+django-ses==3.5.0
+
+# Forms & Validation
+django-crispy-forms==2.1
+crispy-bootstrap5==0.7
+
+# Internationalization
+django-modeltranslation==0.18.11
+
+# Admin Enhancements
+django-admin-interface==0.26.0
+django-colorfield==0.10.1
+
+# Search
+django-haystack==3.2.1
+elasticsearch==8.11.0
+
+# Performance
+django-cachalot==2.6.1
+django-compressor==4.4
+
+# Development Tools
+django-silk==5.0.4
+factory-boy==3.3.0
+faker==20.1.0
+
+# Testing
+pytest==7.4.3
+pytest-django==4.7.0
+pytest-cov==4.1.0
+pytest-mock==3.12.0
+
+# Code Quality
+black==23.11.0
+flake8==6.1.0
+isort==5.12.0
+pre-commit==3.6.0
+
+# Utilities
+python-decouple==3.8
+python-dotenv==1.0.0
+requests==2.31.0
+urllib3==2.1.0
+pytz==2023.3
+python-dateutil==2.8.2
+
+# Data Processing
+pandas==2.1.4
+numpy==1.25.2
+
+# Mobile Money Payment APIs
+# MTN MoMo
+requests-oauthlib==1.3.1
+
+# Image Processing
+Pillow>=10.1.0
+pillow-heif==0.13.0
+
+# PDF Generation
+reportlab==4.0.7
+weasyprint==60.2
+
+# Excel File Processing
+openpyxl==3.1.2
+xlsxwriter==3.1.9
+
+# CSV Processing
+unicodecsv==0.14.1
+
+# HTTP Client
+httpx==0.25.2
+
+# JSON Processing
+jsonschema==4.20.0
+ujson==5.8.0
+
+# Serialization
+marshmallow==3.20.1
+django-rest-marshmallow==4.0.2
+
+# Pagination
+django-rest-framework-paginate==1.0.2
+
+# Permissions
+django-guardian==2.4.0
+django-rules==3.3
+
+# Thumbnails
+easy-thumbnails==2.8.5
 django-imagekit==5.0.0
 
-# API documentation
-drf-yasg==1.21.7
-django-rest-swagger==2.2.0
+# Slugs
+django-autoslug==1.9.9
+python-slugify==8.0.1
 
-# Payment integrations
-requests==2.31.0
-pycryptodome==3.19.0
+# Time Zones
+pytz==2023.3
 
-# Monitoring and logging
-sentry-sdk[django]==1.38.0
-django-debug-toolbar==4.2.0
+# Environment Variables
+python-decouple==3.8
 
-# Development and testing
-django-seed==0.3.1
-factory-boy==3.3.0
-pytest==7.4.3
-pytest-django==4.6.0
-coverage==7.3.2
+# Configuration Management
+dynaconf==3.2.4
 
-# Production server
+# Health Checks
+django-health-check==3.17.0
+
+# Rate Limiting
+django-ratelimit==4.1.0
+
+# Phone Number Validation
+django-phonenumber-field==7.2.0
+phonenumbers==8.13.26
+
+# Country/Region Data
+django-countries==7.5.1
+
+# Currency
+django-money==3.4.1
+py-moneyed==3.0
+
+# Social Authentication (if needed later)
+social-auth-app-django==5.4.0
+
+# Web Server
 gunicorn==21.2.0
 whitenoise==6.6.0
 
-# Utilities
-python-dateutil==2.8.2
-pytz==2023.3
-django-taggit==4.0.0
-django-mptt==0.15.0
+# Process Management
+supervisor==4.2.5
+
+# Development Server (for local development)
+django-livereload-server==0.4
+
+# API Versioning
+django-rest-framework-api-key==3.0.0
+
+# Content Management
+django-ckeditor==6.7.0
+
+# Audit Trail
+django-auditlog==2.2.2
+
+# Backup Utilities
+django-dbbackup==4.0.2
+
+# Sitemap
+django-sitemap==2.3
+
+# SEO
+django-meta==2.4.0
+
+# Analytics
+django-analytical==3.1.0
+
+# Notifications
+django-notifications-hq==1.8.3
+
+# WebSockets (for real-time features)
+channels==4.0.0
+channels-redis==4.1.0
+daphne==4.0.0
+
+# ASGI Server
+uvicorn==0.24.0
+
+# Async Support
+asgiref==3.7.2
+
+# Background Tasks Alternative
+django-background-tasks==1.2.8
+
+# Logging
+structlog==23.2.0
+colorlog==6.8.0
+
+# Metrics
+django-prometheus==2.3.1
+
+# Geographic Data (if delivery zones needed)
+django-location-field==2.7.3
+
+# QR Code Generation
+qrcode==7.4.2
+
+# Barcode Generation
+python-barcode==0.15.1
+
+# UUID Utilities
+shortuuid==1.0.11
+
+# String Utilities
+text-unidecode==1.3
+
+# Network Utilities
+netaddr==0.10.1
+
+# Markdown Support
+markdown==3.5.1
+django-markdownx==4.0.2
+
+# Rich Text Editor
+django-tinymce==3.6.1
+
+# File Upload Handling
+django-uploadfield==1.0.3
+
+# Model Utilities
+django-model-utils==4.3.1
+
+# Form Widgets
+django-widget-tweaks==1.5.0
+
+# Django Extensions
+django-extra-views==0.14.0
+
+# Custom Management Commands
+click==8.1.7
+
+# Data Fixtures
+django-fixture-magic==0.1.5
+
+# Performance Monitoring
+django-silk==5.0.4
+
+# Memory Profiling
+memory-profiler==0.61.0
+
+# CPU Profiling
+py-spy==0.3.14
+djangorestframework-nested==0.15.0
+
+# Production Requirements Only
+# (Include only in production deployment)
+
+# Error Tracking
+# sentry-sdk[django]==1.38.0
+
+# APM (Application Performance Monitoring)
+# elastic-apm==6.20.0
+
+# Production Web Server
+# uWSGI==2.0.23  # Alternative to gunicorn
+
+# SSL Certificate Management
+# certbot==2.7.4
+
+# System Monitoring
+# psutil==5.9.6
+
+# Log Aggregation
+# python-logstash==0.4.8
+
+# Health Monitoring
+# newrelic==9.2.0  # If using New Relic
+
+# Development Requirements Only
+# (Exclude from production)
+
+# Debug Tools (already included above)
+# django-debug-toolbar==4.2.0
+# django-silk==5.0.4
+
+# Testing Tools (already included above)
+# pytest-django==4.7.0
+# factory-boy==3.3.0
+
+# Documentation
+# Sphinx==7.2.6
+# sphinx-rtd-theme==1.3.0
+
+# API Documentation
+# drf-yasg==1.21.7  # Alternative to spectacular
