--- a/.env.example
+++ b/.env.example
@@ -2,14 +2,20 @@
 # Django Settings
 SECRET_KEY=your-secret-key-here
 DEBUG=False
-DJANGO_SETTINGS_MODULE=shoponline_project.settings.production
+DJANGO_SETTINGS_MODULE=shoponline.settings.production
 
 # Database Configuration
+#DB_NAME=shoponline_db
+#DB_USER=postgres
+#DB_PASSWORD=your-db-password
+#DB_HOST=localhost
+#DB_PORT=5432
 DB_NAME=shoponline_db
-DB_USER=postgres
-DB_PASSWORD=your-db-password
+DB_USER=shoponline_user
+DB_PASSWORD=synUpbownio@$9
 DB_HOST=localhost
-DB_PORT=5432
+DB_PORT=5433 
+DJANGO_SETTINGS_MODULE=shoponline.settings.development
 
 # Redis Configuration
 REDIS_URL=redis://localhost:6379/0
